# rlibc

./: .gitignore  .gitmodules  Cargo.toml  build.rs  test.c
.cargo/: config
src/: lib.rs  macros.rs  main.rs
src/libc/: ctype.rs  errno.rs  mod.rs  stdio.rs  string.rs  time.rs  undef.rs
src/libci/: ctype.rs  errno.rs  mod.rs  stdio.rs  string.rs  time.rs
src/math/: mod.rs
src/posix/: dlfcn.rs  mm.rs  mod.rs  pm.rs  signal.rs  stdlib.rs  unistd.rs  utime.rs
src/rust/: macros.rs  mod.rs
src/rust/x86_64/linux/: start.rs
src/rust/x86_64/macos/: start.rs
src/startup/x86_64/: linux.rs  macos.rs
src/syscalls/linux/: x86_64.rs
src/syscalls/macos/: x86_64.rs
src/types/: mod.rs
src/types/linux/: mod.rs  x86_64.rs
